<resources>
    <string name="app_name">FlowerPower</string>
    <string name="splash_title_string">Flower Power App</string>
    <string name="action_settings">Settings</string>
    <string name="enter_string">Enter</string>
    <string name="list_of_orders_string">Orders List</string>
    <string name="exit_string">Exit</string>
    <string name="back_string">Back</string>
    <string name="client_string">Client:</string>
    <string name="price_string">$</string>
    <string name="order_detail_string">Order Detail</string>
    <string name="order_id_text_string">Order ID:</string>
    <string name="order_description_text_string">Order Description:</string>
    <string name="order_price_text_string">Order Price:</string>
    <string name="order_client_text_string">Deliver To:</string>

</resources>
