<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:clickable="true"
    android:background="@android:color/holo_orange_light">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/order_detail_string"
        android:gravity="center"
        android:id="@+id/order_detail_title_text" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id_text_string"
        android:id="@+id/order_id_lable"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="122dp"
        app:layout_constraintTop_toBottomOf="@+id/order_detail_title_text"
        android:layout_marginLeft="127dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_price_lable"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/order_price_text_string"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/order_id_lable"
        android:layout_marginLeft="100dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_deliver_to_lable"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/order_client_text_string"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/order_price_lable"
        android:layout_marginLeft="111dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_description_lable"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/order_description_text_string"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/order_deliver_to_lable"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_id_text"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@+id/order_id_lable"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="122dp"
        app:layout_constraintTop_toBottomOf="@+id/order_detail_title_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/order_price_text"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/order_id_text"
        app:layout_constraintLeft_toRightOf="@+id/order_price_lable"
        android:layout_marginLeft="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deliver_to_text"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/order_price_text"
        app:layout_constraintLeft_toRightOf="@+id/order_deliver_to_lable"
        android:layout_marginLeft="24dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_description_text"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/deliver_to_text"
        app:layout_constraintLeft_toRightOf="@+id/order_description_lable"
        android:layout_marginLeft="24dp" />

    <Button
        android:layout_width="0dp"
        android:id="@+id/back_button"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/holo_orange_dark"
        android:text="@string/back_string"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>